--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "staticvue-example",
-  "description": "default example",
-  "authors": "numfin",
+  "name": "stopwarukraine",
+  "description": "stopwarukraine",
+  "authors": "ND",
   "version": "1.0.0",
   "main": "staticvue.js",
   "scripts": {
