--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "types": [
       "vite-plugin-vue-layouts/client",
       "vite-plugin-pages/client",
-      "vite/client"
+      "vite/client",
     ],
     "allowSyntheticDefaultImports": true,
     "allowJs": true
