--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "axios": "^0.24.0",
     "js-cookie": "^3.0.1",
     "jsdom": "^19.0.0",
+    "pinia": "^2.0.11",
     "sass": "^1.48.0",
     "vite-plugin-pages": "^0.20.0",
     "vue": "^3.2.25",
