--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prepare": "husky install",
     "lint": "yarn lint:js && yarn lint:style",
     "commit": "git-cz",
-    "deploy": "firebase deploy --only hosting"
+    "deploy": "firebase deploy --only hosting",
+    "release": "yarn generate && yarn deploy"
   },
   "config": {
     "commitizen": {
